Spacing fix

--- a/style.css
+++ b/style.css
@@ -58,6 +58,7 @@
     border: 4px solid #3882F6;
     border-radius: 25px;
     padding:20px;
+    margin-bottom: 10px;
     height:100px;
     width 100px;
 }
@@ -112,7 +113,9 @@
     font-size: 36px;
     font-style:italic;
 }
-
+#info {
+    font-weight: 100;
+}
 #quoteauth {
     font-size: 18px;
     font-weight: 600;
